infra/k8s/workspace.app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace
  labels:
    app: workspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      labels:
        app: workspace
    spec:
      containers:
        - name: workspace
          image: workspace
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
spec:
  selector:
    app: workspace
  ports:
    - port: 8081
      targetPort: 8081
